--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
     <title>Nightfall Speedrun Map</title>
     <link rel="stylesheet" type="text/css" href="index.css">
     <script type="text/javascript" src="../../../lib/dragscroll.js"></script>
-    <script type="text/javascript" src="skill_click.js"></script>
+    <script type="text/javascript" src="index.js"></script>
 </head>
 <body class="dragscroll">
     <img src="background.jpg">
